k8s/web/area.web.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: __ENVIRONMENT_SLUG__-area
  name: __ENVIRONMENT_SLUG__-area-web
  labels:
    app: __ENVIRONMENT_SLUG__-area-web
    ref: __ENVIRONMENT_SLUG__
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: __ENVIRONMENT_SLUG__-area-web
